# synacor-challenge

./: Cargo.toml  combo.py  first.in  notes.txt
data/: arch-spec
input/: first.in  second.in
logs/: program.asm
src/: disassemble.rs  lib.rs  main.rs  path.rs  solve.rs
