[package]
name = "synacor-challenge"
version = "0.1.0"
edition = "2018"
default-run = "main"

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "disassemble"
path = "src/disassemble.rs"

[[bin]]
name = "solve"
path = "src/solve.rs"

[[bin]]
name = "path"
path = "src/path.rs"
